# trackerZ

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  verify_m3.py
data/: seed.sql
data/migrations/: 0001_base.sql  0001_init.sql  0002_add_extras.sql  0002_project_updates.sql  0002_seed.sql  0003_phase_rules.sql  0003_project_updates_indexes_triggers.sql  0004_fix_phase_triggers.sql  0004_task_and_subtask_updates_indexes_triggers.sql  0005_rename_created_to_updated_in_updates.sql  0006_add_project_updates.sql  0006_casted_phase_validation.sql  0007_extend_task_updates.sql  0007_phase_matrix_triggers.sql  0008_task_updates_index.sql  0010_standardize_update_timestamps.sql  0011_touch_updated_at.sql  0013_reason_autofill_task_subtask.sql
scripts/: migrate_title_and_actor_cleanup.py
src/: app_context.py  app_launcher.py  dev_seed_m5.py  main.py
src/diagnostics/: __init__.py  diagnostics_panel.py
src/models/: __init__.py  dao.py  db.py  entities.py  types.py
src/repositories/: __init__.py  db.py  sqlite_phase_repository.py  sqlite_project_repository.py  sqlite_projects_repository.py  sqlite_subtask_repository.py  sqlite_subtask_updates_repository.py  sqlite_task_repository.py  sqlite_task_updates_repository.py
src/services/: phase_rules.py  phase_service.py  wiring_phase_service.py
src/tools/: migrate.py  verify_m2.py
src/trackerZ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: diagnostics.py  (+21 more)
tests/: conftest.py  test_phase_rules.py  test_phase_service.py  test_phase_sqlite_integration.py  verify_m3.py
(+22 files in other folders)
