#Rev 0.0.1

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackerZ"
version = "0.1.0"
description = "Native Ubuntu project tracker — A01→M03 baseline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "trackerZ" }]

dependencies = [
  "PySide6>=6.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

